modify trip.controller
