# src/routes/api/trip.route.js
@@ -1,5 +1,5 @@
 import { Router } from "express";
-import { deleteTrip, favorTrip, keepTrip, ownTrip, popularTrips, searchTripById } from "../../controllers/api/trip.controller.js";
+import { addPlaceCollection, createTrip, deleteTrip, favorTrip, keepTrip, ownTrip, popularTrips, searchTripById } from "../../controllers/api/trip.controller.js";
 
 const TripRouter = Router();
 
@@ -9,5 +9,8 @@ TripRouter.get("/:id/own", ownTrip);
 TripRouter.get("/:id/keep", keepTrip);
 TripRouter.post("/:id/favor", favorTrip);
 TripRouter.delete("/:id", deleteTrip);
+
+TripRouter.post("/create", createTrip);
+TripRouter.post("/collections", addPlaceCollection);
 
 export default TripRouter;
